# pico-i2s

./: CMakeLists.txt  LICENSE  README.md
src/: i2s_m.pio  main.c  main.cpp
